--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
   font-size: 20px;
   font-family: 'Kalam', cursive;
-  background-image: url(images/fond.jpg);
+  background-image: url(fond.jpg);
   background-size: cover;
 }
 
